<?xml version="1.0"?>
<package format="2">
  <name>airi_base_cpp</name>
  <version>0.1.0</version>
  <description>Base controller for AIRI</description>
  <maintainer email="hid.michel@gmail.com">Michel Hidalgo</maintainer>
  <license>Apache License 2</license>

  <author email="hid.michel@gmail.com">Michel Hidalgo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python-msgpack</exec_depend>
  <exec_depend>python-numpy-stl-pip</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

</package>
