<?xml version="1.0"?>
<package format="2">
  <name>airi_description</name>
  <version>0.1.0</version>
  <description>URDF and xacro description files for AIRI</description>
  <maintainer email="hid.michel@gmail.com">Michel Hidalgo</maintainer>
  <license>Apache License 2</license>

  <author email="hid.michel@gmail.com">Michel Hidalgo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <gazebo gazebo_media_path="${prefix}"/>
    <gazebo plugin_path="${prefix}/lib"/>
  </export>
</package>
