<?xml version="1.0"?>
<package format="2">
  <name>airi_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo simulation models and environment for AIRI</description>

  <maintainer email="hid.michel@gmail.com">Michel Hidalgo</maintainer>
  <license>Apache License 2</license>

  <author email="hid.michel@gmail.com">Michel Hidalgo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>airi_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
