<?xml version="1.0"?>
<package format="2">
  <name>airi_slam</name>
  <version>0.1.0</version>
  <description>SLAM tools and launch files for AIRI</description>

  <maintainer email="hid.michel@gmail.com">Michel Hidalgo</maintainer>
  <license>Apache License 2</license>

  <author email="hid.michel@gmail.com">Michel Hidalgo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>roslaunch</exec_depend>

  <export>
  </export>
</package>
